# password-keeper-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  todo.txt
migrations/: base.py  env.py
migrations/versions/: ad76eba65f25_комментарий_к_миграции.py
src/: routes.py  super_enum.py
src/auth/controllers/: auth_controller.py
src/auth/depends/: auth_depends.py
src/auth/schemas/: auth_schemas.py  token_schemas.py  user_schemas.py
src/auth/services/: auth_service.py
src/config/: project_config.py
src/config/auth/: auth_config.py  auth_helper.py
src/config/database/: db_config.py  db_helper.py
src/config/redis/: redis_config.py  redis_helper.py
src/constants/: db_constants.py  token_type_constants.py
src/intefaces/: permission_interface.py
src/models/: __init__.py  base_model.py  data_group_model.py  password_data_model.py  role_model.py  secret_data_model.py  user_group_permissions_model.py  user_model.py
src/repositories/: base_repository.py  base_uow.py  sqlalchemy_repository.py  sqlalchemy_uow.py  user_repository.py
src/schemas/: base_schema.py  user_schemas.py
src/services/: base_service.py  query_base_service.py  session_user_service.py  user_service.py
src/utils/: password_utils.py  role.py
