[tool.poetry]
name = "storage-password"
version = "0.1.0"
description = ""
authors = ["Никита Касимов <kasimov.n@incasecorp.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
alembic = "^1.15.2"
anyio = "^4.9.0"
asyncpg = "^0.30.0"
urllib3 = "^2.4.0"
requests = "^2.32.3"
dotenv = "^0.9.9"
pydantic-settings = "^2.9.1"
pydantic = {extras = ["email"], version = "^2.11.3"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
flake8-bugbear = "^24.12.12"
flake8-commas = "^4.0.0"
flake8 = "^7.2.0"
flake8-variables-names = "^0.0.6"
black = "^25.1.0"
mypy = "^1.15.0"
python-multipart = "^0.0.20"
redis = "^6.2.0"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
